# securityscarletai

./: .dockerignore  .env.example  .gitignore  .venv  AGENT_A_PLAN.md  AUDIT_REPORT.md  BUG_CATALOG.md  Dockerfile  HOW_TO_USE.md  HOW_TO_USE_REVIEW.md  LICENSE  Makefile  README.md  SECURITY.md  SESSION_HANDOFF.md  SecurityScarletAI-Plan-v2.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.agent-briefs/: AGENT_A_DEBUG_2026-06-03.md  AGENT_B_DEBUG_2026-06-03.md  SPRINT_SUMMARY_2026-06-03.md
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 0cb50438803b_add_process_cmdline_and_path_columns.py  a1b2c3d4e5f6_initial_schema_from_sql.py  c54a2335ab60_phase2_alert_suppressions_and_notes.py  d7f2b891e4a3_phase4_cases_lessons_learned.py  e8a1c9f7d5b3_add_must_change_password.py
config/: osquery.conf
dashboard/: ai_chat_view.py  alerts_view.py  api_client.py  auth.py  cases_view.py  charts.py  hunt_view.py  logs_view.py  main.py  rules_view.py  ui_utils.py
deploy/: Caddyfile
docs/: AI.md  ATTACK-SCENARIOS.md  DEPLOYMENT.md  HANDOVER.md  PHASE5-CONTINUATION-PROMPT.md  PHASE_PLAN.md  RULES.md  SECURITYSCARLETAI-PLAN.md  V2_PRODUCTION_ROADMAP.md
rules/sigma/: brute_force_ssh.yml  launch_agent_persistence.yml  outbound_rare_port.yml  privilege_escalation_sudo.yml  suspicious_dns.yml  suspicious_tmp_process.yml
rules/sigma/authentication/: credential_dumping.yml  failed_login_spike.yml  login_unusual_geography.yml  multiple_account_lockouts.yml  privilege_escalation_sudo.yml  root_login_non_console.yml  service_account_anomaly.yml  ssh_brute_force.yml  ssh_success_after_failures.yml
rules/sigma/cloud/: api_key_new_ip.yml  bulk_data_download.yml  impossible_travel.yml  new_admin_account.yml  saas_permission_escalation.yml
rules/sigma/file/: binary_replacement.yml  cron_modification.yml  log_file_deletion.yml  ransomware_encryption_pattern.yml  sensitive_file_access.yml  webshell_creation.yml
rules/sigma/macOS/: authorization_db_modification.yml  gatekeeper_bypass.yml  hidden_file_creation.yml  keychain_access.yml  launch_agent_persistence.yml  launch_daemon_persistence.yml  safari_extension_install.yml  sip_modification.yml  tcc_database_modification.yml  xprotect_removal.yml
rules/sigma/network/: c2_beaconing.yml  data_exfiltration_volume.yml  dns_tunneling.yml  lateral_movement.yml  rare_port_outbound.yml  suspicious_dns.yml  tor_exit_node.yml
rules/sigma/process/: download_execute.yml  encoded_command_execution.yml  lolbin_execution.yml  process_injection.yml  reverse_shell.yml  script_interpreter_unexpected_location.yml  suspicious_parent_child.yml  suspicious_tmp_process.yml
scripts/: analyze_alerts.py  backup.sh  demo.sh  entrypoint.sh  generate_attack_data.py  generate_osquery_events.py  generate_training_data.py  migrate_passwords.py  run_osquery_demo.sh  seed_demo_data.py  seed_realistic_data.py  validate_config.py
src/ai/: alert_explanation.py  alert_triage.py  chat.py  cost_tracker.py  hunting_assistant.py  nl2sql.py  ollama_client.py  prompts.py  risk_scoring.py  ueba.py  utils.py
src/api/: ai.py  alerts.py  audit.py  auth.py  auth_login.py  cases.py  chat.py  correlation.py  health.py  hunt.py  ingest.py  logs.py  main.py  middleware.py  query.py  rate_limit.py  redis_client.py  rules.py  threat_intel.py  websocket.py
src/config/: logging.py  settings.py
src/db/: connection.py  schema.sql  writer.py
src/detection/: ai_analyzer.py  alerts.py  correlation.py  mitre.py  scheduler.py  sequences.py  sigma.py
src/detection/backends/: __init__.py  postgresql.py
src/enrichment/: pipeline.py
src/ingestion/: parser.py  runner.py  schemas.py  shipper.py
src/intel/: threat_intel.py
src/response/: notifications.py  soar.py
src/services/: writer.py
tests/integration/: conftest.py  test_detection.py  test_ingestion.py
tests/unit/: _test_request.py  conftest.py  test_ai_analyzer.py  test_ai_chat.py  test_ai_cost_tracker.py  test_ai_ollama_contract.py  test_ai_prompts.py  test_ai_triage.py  test_alert_explanation_full.py  test_alert_triage_v2.py  test_alerts.py  test_alerts_detailed.py  test_alerts_full.py  test_api_ai_models.py  test_api_ai_status_v2.py  test_api_chat.py  test_api_endpoints.py  test_api_health.py  test_api_ingest.py  test_api_main.py  test_api_query.py  test_api_rules.py  test_api_rules_full.py  test_api_threat_intel.py  test_audit.py  test_audit_extra.py  test_auth_login.py  test_auth_revocation.py  test_cases_api.py  test_correlation.py  test_correlation_api.py  test_correlation_event_driven.py  test_correlation_extra.py  test_correlation_match_building.py  test_coverage_final.py  test_dashboard_api.py  test_dashboard_api_token.py  test_dashboard_polish.py  test_docker_entrypoint.py  test_enrichment.py  (+29 more)
