[project]
name = "securityscarletai"
version = "0.1.0"
description = ""
authors = [
    {name = "Raphael Main",email = "raphael@main.com"}
]
requires-python = ">=3.11,<4.0"
package-mode = false
dependencies = [
    "fastapi (==0.115.*)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy[asyncio] (==2.0.*)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (==2.*)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "websockets (>=16.0,<17.0)",
    "apscheduler (==3.10.*)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "streamlit (>=1.40.0,<2.0.0)",
    "watchfiles (>=1.1.1,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "geoip2 (>=5.2.0,<6.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "aiosmtplib (>=3.0.0,<4.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "rich (>=13.0.0,<14.0.0)",
    "altair (>=4.0.0,<5.0.0)",
    "pysigma (>=1.3.3,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "sqlparse (>=0.5.5,<0.6.0)",
    "streamlit-autorefresh (>=1.0.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "hypothesis (>=6.152.4,<7.0.0)"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]
# S = bandit security checks — important for a security project
# S608: Possible SQL injection — false positives for parameterized asyncpg queries
#   Our pattern uses $1, $2, etc. for parameterization, which is safe.
#   The string-based query construction flagged by S608 uses ONLY safe placeholders,
#   never user input directly. All user values are passed as separate parameters.
ignore = ["S608"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
