[project]
name = "securityscarletai"
version = "0.1.0"
description = ""
authors = [
    {name = "SecurityScarletAI Contributors"}
]
requires-python = ">=3.11,<4.0"
package-mode = false
dependencies = [
    "fastapi (==0.115.*)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy[asyncio] (==2.0.*)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (==2.*)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "websockets (>=16.0,<17.0)",
    "apscheduler (==3.10.*)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "streamlit (>=1.40.0,<2.0.0)",
    "watchfiles (>=1.1.1,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "geoip2 (>=5.2.0,<6.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "aiosmtplib (>=3.0.0,<4.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "rich (>=13.0.0,<14.0.0)",
    "altair (>=4.0.0,<5.0.0)",
    "pysigma (>=1.3.3,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "sqlparse (>=0.5.5,<0.6.0)",
    "streamlit-autorefresh (>=1.0.1)",
    "redis (>=5.0.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "hypothesis (>=6.152.4,<7.0.0)"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]
# S = bandit security checks — important for a security project
# S608: Possible SQL injection — false positives for parameterized asyncpg queries
#   Our pattern uses $1, $2, etc. for parameterization, which is safe.
#   The string-based query construction flagged by S608 uses ONLY safe placeholders,
#   never user input directly. All user values are passed as separate parameters.
ignore = ["S608", "B008"]  # B008: FastAPI Depends() in args is standard pattern

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "B017", "F841", "E402", "B007", "S110", "B904", "E501"]  # test files: relaxed line length, assert OK, unused vars OK

[tool.mypy]
python_version = "3.11"
plugins = "pydantic.mypy"
# Pragmatic, CI-enforced type-checking.
#
# Previously `strict = true` was configured but produced 336 errors that were
# never enforced (CI never ran mypy) — a false signal of type safety. This
# config is actually green in CI. Tighten incrementally: the next steps are
# `disallow_untyped_defs` (115 untyped functions) and `disallow_any_generics`
# (133 bare dict/list), each tracked separately.
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
warn_return_any = true

[[tool.mypy.overrides]]
# These dependencies ship no type stubs / py.typed marker. Silenced per-module
# so missing-stub noise doesn't mask real type errors elsewhere.
module = [
  "asyncpg",
  "asyncpg.*",
  "joblib",
  "joblib.*",
  "sklearn",
  "sklearn.*",
  "apscheduler.*",
  "jose",
  "jose.*",
  "passlib",
  "passlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
